Bug 172814 - crashed during normal run
Summary: crashed during normal run
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Unspecified
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-14 19:39 UTC by Juha Tuomala
Modified: 2008-10-16 21:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juha Tuomala 2008-10-14 19:39:12 UTC
Version:            (using KDE 4.1.2)
Installed from:    Fedora RPMs


[Thread 0x43bc9950 (LWP 24207) exited]
[Thread 0x445ca950 (LWP 24203) exited]
[Thread 0x4141e950 (LWP 24205) exited]
[Thread 0x431c8950 (LWP 24204) exited]
[Thread 0x41e1f950 (LWP 24206) exited]
[New Thread 0x41e1f950 (LWP 24209)]
[New Thread 0x431c8950 (LWP 24210)]

Program received signal SIGBUS, Bus error.
[Switching to Thread 0x7f3297791800 (LWP 24192)]
0x0000003f21a83943 in memcpy () from /lib64/libc.so.6
(gdb) bt
#0  0x0000003f21a83943 in memcpy () from /lib64/libc.so.6
#1  0x000000322c862e98 in ?? () from /usr/lib64/libbtcore.so.7
#2  0x000000322c86a0de in bt::Downloader::pieceReceived () from /usr/lib64/libbtcore.so.7
#3  0x000000322c86a9d4 in bt::Downloader::qt_metacall () from /usr/lib64/libbtcore.so.7
#4  0x0000003cad157194 in QMetaObject::activate () from /usr/lib64/libQtCore.so.4
#5  0x000000322c86f7e2 in ?? () from /usr/lib64/libbtcore.so.7
#6  0x000000322c85a066 in ?? () from /usr/lib64/libbtcore.so.7
#7  0x000000322c85a35d in ?? () from /usr/lib64/libbtcore.so.7
#8  0x0000003cad157194 in QMetaObject::activate () from /usr/lib64/libQtCore.so.4
#9  0x000000322c853495 in ?? () from /usr/lib64/libbtcore.so.7
#10 0x000000322c85407a in ?? () from /usr/lib64/libbtcore.so.7
#11 0x000000322c85d1dd in ?? () from /usr/lib64/libbtcore.so.7
#12 0x000000322c8539c5 in ?? () from /usr/lib64/libbtcore.so.7
#13 0x000000322c857ca4 in bt::PeerManager::update () from /usr/lib64/libbtcore.so.7
#14 0x000000322c889cc6 in bt::TorrentControl::update () from /usr/lib64/libbtcore.so.7
#15 0x00000000004277ca in _start ()
Comment 1 Joris Guisson 2008-10-15 19:30:37 UTC
Is disk space preallocation enabled ?
Comment 2 Juha Tuomala 2008-10-16 08:41:46 UTC
> Is disk space preallocation enabled ?

No it's not.
Comment 3 Joris Guisson 2008-10-16 19:23:35 UTC
SVN commit 872231 by guisson:

Update file size in CacheFile::growFile, this fixes a SIGBUS error

BUG: 172814

 M  +1 -1      ChangeLog  
 M  +2 -0      libbtcore/diskio/cachefile.cpp  
 M  +0 -7      libbtcore/download/chunkdownload.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=872231
Comment 4 Juha Tuomala 2008-10-16 21:56:02 UTC
Thanks!