Update file size in CacheFile::growFile, this fixes a SIGBUS error

BUG: 172814

svn path=/branches/stable/extragear-kde4/network/ktorrent/; revision=872231